--- a/app/src/main/res/layout/activity_reservation_request.xml
+++ b/app/src/main/res/layout/activity_reservation_request.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +7,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context=".reservation.ReservationActivity">
+
+    <LinearLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+        android:orientation="vertical">
 
     <fragment
         android:layout_width="match_parent"
@@ -21,5 +25,15 @@
     <FrameLayout
         android:id="@+id/time_fragment_container"
         android:layout_width="match_parent"
+        android:layout_height="150dp" />
+    <FrameLayout
+        android:id="@+id/choice_fragment_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <FrameLayout
+        android:id="@+id/menu_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
 </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
