--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -14,6 +14,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginBottom="5dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_today"
+                android:tint="@android:color/holo_blue_dark"
+                android:layout_marginRight="5dp"
+                android:layout_gravity="center_vertical"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -21,38 +34,18 @@
                 android:id="@+id/textView"
                 android:text="@string/pick_date"
                 android:textStyle="bold"
-                android:textColor="@android:color/holo_blue_dark"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="10dp"
+                android:textColor="@android:color/holo_blue_light"
+                android:layout_gravity="center_vertical"
                 />
+        </LinearLayout>
 
-        <NumberPicker
+        <it.polito.mad_lab3.common.NumberPicker
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/numberPicker"
+
             android:layout_gravity="center_horizontal" />
 
-        <!--<CalendarView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/calendarView"
-            />
-            -->
-
-           <!-- <DatePicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/datePicker"
-                android:calendarViewShown="false"
-                android:layout_margin="0dp"
-                android:spinnersShown="true"
-                android:datePickerMode="spinner"
-                android:layout_gravity="center_horizontal" />
-            <ListView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:id="@+id/listView"
-                android:layout_gravity="center" />-->
 
     </LinearLayout>
 
