--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -9,18 +9,30 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textView"
-        android:text="@string/pick_time"
-        android:textStyle="bold"
-        android:textColor="@android:color/holo_blue_dark"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-         />
+        android:gravity="center"
+        android:layout_marginBottom="5dp">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_recent_history"
+            android:tint="@android:color/holo_blue_dark"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center_vertical"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView"
+            android:text="@string/pick_time"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_blue_light"
+            android:layout_gravity="center_vertical"
+            />
+    </LinearLayout>
+
 
     <GridView
         android:layout_width="match_parent"
