--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -39,7 +39,7 @@
                 />
         </LinearLayout>
 
-        <it.polito.mad_lab3.common.NumberPicker
+        <it.polito.mad_lab3.common.ExpandableHeightGridView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/numberPicker"
