--- a/app/src/main/res/layout/activity_show_offer.xml
+++ b/app/src/main/res/layout/activity_show_offer.xml
@@ -35,7 +35,7 @@
                     custom:isLogo="false"
                     custom:heightInDP="200"
                     custom:widthInDP="200"
-                    custom:initialBackground="@drawable/special_offer" />
+                    custom:initialBackground="@drawable/special_offer_transparentbg" />
 
 
 
@@ -53,6 +53,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
+                    android:id="@+id/today_available"
+                    android:visibility="gone"
                     android:height="32dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textStyle="bold"
@@ -61,6 +63,19 @@
                     android:background="@drawable/green_gradiente_inverted"
                     android:text="Today available!"
                     />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:id="@+id/today_not_available"
+                    android:visibility="gone"
+                    android:height="32dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textStyle="bold"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:background="@drawable/red_gradient_inverted"
+                    android:text="@string/today_not_available"                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
