--- a/app/src/main/res/layout/activity_show_additional_info.xml
+++ b/app/src/main/res/layout/activity_show_additional_info.xml
@@ -42,7 +42,6 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"
-                        android:layout_gravity="center_horizontal"
                         android:padding="@dimen/activity_horizontal_margin">
 
                         <ImageView
@@ -52,7 +51,7 @@
                             android:src="@drawable/img1_logo_prova"/>
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceLarge"
                             android:text="Restaurant name"
@@ -63,6 +62,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/location"
                         android:background="?attr/selectableItemBackground"
                         android:orientation="horizontal"
                         android:gravity="center"
@@ -133,12 +133,30 @@
                             android:id="@+id/email" />
                     </LinearLayout>
 
+                    </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                card_view:cardUseCompatPadding="true"
+                card_view:cardCornerRadius="4dp"
+                android:minHeight="64dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:padding="8dp"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Description"
+                        android:text="@string/description"
                         android:textStyle="bold" />
                     <TextView
                         android:layout_width="wrap_content"
