--- a/app/src/main/res/layout/restaurant_basicinfo_fragment.xml
+++ b/app/src/main/res/layout/restaurant_basicinfo_fragment.xml
@@ -94,7 +94,7 @@
             android:textStyle="italic"
             android:gravity="center_vertical|center_horizontal"
             android:textColor="@android:color/holo_red_dark"
-            android:background="@drawable/red_gradient_inverted"
+            android:background="@drawable/red_gradient"
             android:text="Now closed, it's open from 11:30 to 14:30"
             />
     </LinearLayout>
