--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -230,6 +230,7 @@
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
                         android:clickable="true"
+                        android:id="@+id/showAllReviewsButton"
                         android:text="SHOW ALL" />
                 </LinearLayout>
 
