--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -141,6 +141,7 @@
                         android:name="it.polito.mad_lab3.restaurant.offer_prev.OfferPrevFragment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                         />
                     <!--<LinearLayout
                         android:layout_width="wrap_content"
