--- a/app/src/main/res/layout/activity_show_additional_info.xml
+++ b/app/src/main/res/layout/activity_show_additional_info.xml
@@ -71,8 +71,8 @@
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:backgroundTint="@color/black"
-                            android:background="@android:drawable/ic_dialog_map"/>
+                            android:id="@+id/mapIcon"
+                            android:src="@android:drawable/ic_dialog_map"/>
 
                         <TextView
                             android:layout_width="match_parent"
@@ -96,8 +96,8 @@
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:backgroundTint="@color/black"
-                            android:background="@android:drawable/ic_menu_call"/>
+                            android:id="@+id/phoneIcon"
+                            android:src="@android:drawable/sym_action_call"/>
 
                         <TextView
                             android:layout_width="match_parent"
@@ -121,8 +121,8 @@
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:backgroundTint="@color/black"
-                            android:background="@android:drawable/ic_dialog_email"/>
+                            android:id="@+id/emailIcon"
+                            android:src="@android:drawable/ic_dialog_email"/>
 
                         <TextView
                             android:layout_width="match_parent"
