--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,123 +9,128 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="it.polito.mad_lab3.MainActivity"
-        android:background="@drawable/wood_background"
-        >
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="175dp"
-                android:id="@+id/cover"
-                android:src="@drawable/title_wood"
-                android:layout_marginTop="20dp"
-
-                />
-
-            <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/restaurant_name"
-                android:text=""
-                android:layout_alignParentTop="true"
-                android:textColor="@android:color/white"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_marginTop="20dp"
-                android:layout_centerHorizontal="true"
-                android:gravity="center" />
-        </RelativeLayout>
-
-        <android.support.v7.widget.CardView
+        android:layout_height="match_parent">
+        
+        <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            card_view:cardCornerRadius="5dp"
-            card_view:cardBackgroundColor="@color/lightGrey"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="it.polito.mad_lab3.MainActivity"
+            android:background="@drawable/wood_background"
             >
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
-                <android.support.v7.widget.CardView
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    card_view:cardCornerRadius="5dp"
-                    card_view:cardBackgroundColor="@color/white"
-                    >
+                    android:layout_height="175dp"
+                    android:id="@+id/cover"
+                    android:src="@drawable/title_wood"
+                    android:layout_marginTop="20dp"
 
-                    <SearchView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/searchView_main"
-                        android:layout_gravity="center_horizontal"
-                        />
-                </android.support.v7.widget.CardView>
+                    />
+
+                <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/info_ricerca"
-                    android:gravity="center"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="5dp"/>
+                    android:id="@+id/restaurant_name"
+                    android:text=""
+                    android:layout_alignParentTop="true"
+                    android:textColor="@android:color/white"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_marginTop="20dp"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center" />
+            </RelativeLayout>
 
-            </LinearLayout>
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                card_view:cardCornerRadius="5dp"
+                card_view:cardBackgroundColor="@color/lightGrey"
+                >
 
-        </android.support.v7.widget.CardView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/titolo_offerte_vicine"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
-            style="@style/niceText" />
+                    <android.support.v7.widget.CardView
+                        xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        card_view:cardCornerRadius="5dp"
+                        card_view:cardBackgroundColor="@color/white"
+                        >
 
-        <!--
-            qui ci possiamo mettere una lista con card medio/grandi
-            che possiamo cliccare e andare subito alla pagina
-            del ristorante desiderato
-         -->
+                        <SearchView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/searchView_main"
+                            android:layout_gravity="center_horizontal"
+                            />
+                    </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:id="@+id/recyclerView_nearOffers"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/info_ricerca"
+                        android:gravity="center"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="5dp"/>
 
-        <Button
-            android:layout_marginTop="10dp"
-            android:id="@+id/addReview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add Review" />
+                </LinearLayout>
 
-    </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/titolo_offerte_vicine"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="10sp"
+                style="@style/niceText" />
+
+            <!--
+                qui ci possiamo mettere una lista con card medio/grandi
+                che possiamo cliccare e andare subito alla pagina
+                del ristorante desiderato
+             -->
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:id="@+id/recyclerView_nearOffers"/>
+
+            <Button
+                android:layout_marginTop="70dp"
+                android:id="@+id/addReview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Review" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <!---->
     <android.support.design.widget.NavigationView
